2002-12-15  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03571] base=0 -> 10 in toNumber()
	* parsetagx.c (toNumber): strtol base=10

2002-12-15  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03570] meta tag in frame
	* frame.c (createFrameFile): fix meta equiv parse in frame

2002-12-15  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03569] Re: preserve timestamp
	* file.c (loadGeneralFile): PresetveTimestamp
		(_doFileCopy): is_pipe, PreserveTimestamp
		(doFileSave): PreserveTImestamp
	* fm.h (PreserveTimestamp): added
	* rc.c (CMT_PRESERVE_TIMESTAMP): added
		(params3): add preserve_timestamp

2002-12-15  Takahashi Youichirou <nikuq@hk.airnet.ne.jp>

	* [w3m-dev 03568] Re: preserve timestamp
	* etc.c (USE_COOKIE): moved
	* file.c (utime.h): include
		(setModtime): added
		(loadGeneralFile): set f.modtime
		(_doFileCopy): setModtime()
		(doFileSave): setModtime()
	* ftp.c (getFtpModtime): added
		(openFTP): pass URLFile, set modtime
	* html.h (URLFile): add modtime
	* proto.h (openFTP): arg URLFile *uf
		(mymktime): always
	* url.c (init_stream): initialize modtime
		(openFTPStream): pass URLFile 
		(openURL): openFTPStream
	
2002-12-13  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03567] default keybinding
	* doc-jp/keymap.default (C-q,C-t,(,),+,-,D,L,T,m,r,{,|,},
				M-c,M-k,M-l,M-m,M-o,M-t): assign
	* doc/keymap.default: ditto
	* keybind.c: ditto
	* doc-jp/keymap.lynx (C-q,C-t,C-u,(,),,,.,;,D,L,T,W,[,],
				m,r,w,{,|,},M-<,M->,M-W,M-c,M-g,
				M-k,M-l,M-m,M-n,M-o,M-p,M-t,M-w): assign
	* doc/keymap.lynx: ditto
	* keybind_lynx.c: ditto
	* doc-jp/menu.default (Main): Select,SelectTab,TAB_LINK
	* doc/menu.default: ditto

2002-12-13  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03566] configure prefix
	* configure: add X prefix for expr args

2002-12-13  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03564] clean up displayBuffer()
	* display.c (delayed_msg): static
		(drawAnchorCursor): static