@@ -1,3 +1,8 @@
+2002-12-15  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 03573] Re: Bug#172851: w3m: In form, takes hostname as baseref for relative URI action
+	* url.c (parseURL): if empty is URL, base URL is used
+
 2002-12-15  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03571] base=0 -> 10 in toNumber()
